# Bumblebee

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
bumblebee/activities/: __init__.py  admin.py  apps.py  models.py  utils.py
bumblebee/buzzes/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  utils.py
bumblebee/chats/: apps.py
bumblebee/comments/: admin.py  apps.py  models.py  signals.py  urls.py  utils.py
bumblebee/connections/: admin.py  apps.py  models.py  signals.py  urls.py
bumblebee/core/: apps.py  exceptions.py  helpers.py  permissions.py  urls.py
bumblebee/core/api/: views.py
bumblebee/feeds/: apps.py  models.py  urls.py  utils.py
bumblebee/notifications/: admin.py  apps.py  choices.py  models.py  signals.py  urls.py  utils.py
bumblebee/notifications/models/: grouped_models.py  individual_models.py
bumblebee/profiles/: __init__.py  admin.py  apps.py  models.py  signals.py  urls.py  utils.py  validators.py
bumblebee/profiles/api/: serializers.py  views.py
bumblebee/search/: apps.py  urls.py
bumblebee/sentiment_analysis/: apps.py  trainer.py  utils.py
bumblebee/sentiment_analysis/notebook/: Bumblebee.ipynb
bumblebee/users/: admin.py  apps.py  exceptions.py  forms.py  managers.py  models.py  permissions.py  signals.py  tests.py  urls.py  utils.py
bumblebee/users/api/: helpers.py  (+2 more)
config/: asgi.py  definitions.py  urls.py  wsgi.py
config/settings/: base.py  elephant.py  heroku.py  local.py  settings.py  utils.py
docs/: changelogs.md  database_setup.md  dependencies.md
scripts/: database.sql
templates/users/: email_verification.html  reset-password.html
(+33 files in other folders)
