[tool.poetry]
name = "bumblebee_backend"
version = "0.1.4"
description = "A social media for YOU"
authors = ["The Godfathers"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
djangorestframework-simplejwt = "^4.6.0"
djangorestframework = "^3.12.4"

[tool.poetry.dev-dependencies]
isort = "^5.8.0"
drf-yasg = "^1.20.0"
black = "^21.4b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
